<resources>
    <string name="app_name">NNS-Listing VASA</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="hh08a1">  کیا کوئی جواب دہندہ موجود ہے؟ </string>
    <string name="hh08"> خاندان کے سربراہ کا نام </string>
    <string name="hh09"> موبائل نمبر </string>
    <string name="hh10a"> تعداد </string>
    <string name="hh12a"> تعداد </string>
    <string name="hh14a"> تعداد </string>
    <string name="hh10"> کیا اس گھر میں 3 سال سے کم عمر بچے رہائش پزیر ہیں؟ </string>
    <string name="hh12"> کیااس گھر میں 10 سے 19 سال کے مرد رہائش پزیر ہیں؟ </string>
    <string name="hh14"> کیا اس گھر میں 15 سے 49 سال کی خواتین رہائش پزیر ہیں؟ </string>
    <string name="hh16"> گزشتہ 3 سالوں کے دوران اموات کی تعداد </string>
    <string name="hh17"> کیا اس گھر میں مذید کوئی خاندان رہائش پزیر ہے </string>
    <string name="hh18"> کیا اس گھر میں کوئی 3 سال سے کم عمر بچہ رہائش پزیر ہے؟ </string>
    <string name="hh19"> گزشتہ 3 سالوں کے دوران نومولود (0-27دن عمر) بچوں کی اموات کی تعداد </string>
    <string name="hh20"> گزشتہ 3 سالوں کے دوران (28 دن- 12 مہینے) شیرخوار بچوں کی اموات کی تعداد </string>
    <string name="hh21"> گزشتہ 3 سالوں کے دوران (13 مہینے – 59 مہینے) بچوں کی اموات کی تعداد </string>
    <string name="hh22"> گزشتہ 3 سالوں کے دوران مردہ بچوں کی پیدائش کی تعداد۔</string>
    <string name="hh23"> گزشتہ 3 سالوں کے دوران کتنی خواتین کی وفات (دوران حمل ، زچگی یا زچگی کے بعد 42 دن  کے دوران) واقع ہوئی ۔</string>
    <string name="hh24"> گزشتہ 3 سالوں کے دوران (12 سے 19 سال تک کے نو عمر) لڑکوں کی اموات کی تعداد ۔</string>
    <string name="hh25"> گزشتہ 3 سالوں کے دوران (12 سے 19 سال تک کے نو عمر) لڑکیوں کی اموات کی تعداد ۔</string>
    <string name="hh26"> گزشتہ 3 سالوں کے دوران (20 سے 49 سال تک  کی خواتین ) کی اموات کی تعداد ۔</string>
    <string name="hh27"> گزشتہ 3 سالوں کے دوران ( 5 سال – 11 سال کی عمر) کے بچوں کی اموات کی تعداد ۔</string>

    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="rfsd"> انکار </string>
    <string name="locked"> بند </string>

    <string name="txtName"> qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKL ZXCVBNM </string>

</resources>
