<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_household_listing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.ValidatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTeamNoWithFam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hh08a1" />

        <RadioGroup
            android:id="@+id/hh29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/hh29a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/hh29b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rfsd" />

            <RadioButton
                android:id="@+id/hh29c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/locked" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hh08" />

        <EditText
            android:id="@+id/hh08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/txtName"
            android:enabled="false"
            android:hint="@string/hh08"
            android:inputType="text"
            android:maxLength="24" />

        <LinearLayout
            android:id="@+id/fldGrpa01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh18" />

            <EditText
                android:id="@+id/hh18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hh16" />

            <EditText
                android:id="@+id/hh16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hh16"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh19" />

            <EditText
                android:id="@+id/hh19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh20" />

            <EditText
                android:id="@+id/hh20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh21" />

            <EditText
                android:id="@+id/hh21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh27" />

            <EditText
                android:id="@+id/hh27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh22" />

            <EditText
                android:id="@+id/hh22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh24" />

            <EditText
                android:id="@+id/hh24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh25" />

            <EditText
                android:id="@+id/hh25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh26" />

            <EditText
                android:id="@+id/hh26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hh23" />

            <EditText
                android:id="@+id/hh23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hh14a"
                android:inputType="number"
                android:maxLength="1" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNextHH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="NEXT STRUCTURE" />

    </LinearLayout>
</ScrollView>